Add Checkout session and redirect to Checkout.

--- a/public/index.html
+++ b/public/index.html
@@ -235,7 +235,10 @@
         <p class="label">Total</p>
         <p class="price" data-total></p>
       </div>
-      <button id="start-checkout" type="button">Start Checkout</button>
+      <div class="button-group">
+        <button id="custom-checkout" type="button">Start Custom Checkout (Elements)</button>
+        <button id="stripe-checkout" type="button">Start Stripe Checkout</button>
+      </div>
     </div>
   </div>
   <!-- Stripe.js v3 for Elements -->
