Migrate to card_payment_method_beta_1

--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,11 @@
             </fieldset>
           </div>
           <div class="payment-info saved_card">
-            <p>Pay with saved card</p>
+            <label class="select">
+              <span>Select card:</span>
+              <select name="saved_card">
+              </select>
+            </label>
           </div>
           <div class="payment-info sepa_debit">
             <fieldset>
